centering nav vertically and fixed desktop nav visibility

--- a/css/global.css
+++ b/css/global.css
@@ -58,6 +58,7 @@ Desktop Navigation
     top: 0;
     left: 0;
     width: 100%;
+    box-sizing: border-box;
     height: 60px;
     background: white;
     display: flex;
@@ -76,7 +77,7 @@ Desktop Navigation
 #zmt-desktop-nav .zmt-right {
     display: flex;
     align-items: center;
-    min-width: 80px;
+    min-width: 150px;
 }
 
 #zmt-desktop-nav .zmt-right {
@@ -84,11 +85,23 @@ Desktop Navigation
 }
 
 #zmt-desktop-nav a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     background: none;
     border: none;
     color: black;
     font-size: 16px;
+    height: 40px;
+    width: 150px;
+    border-radius: 15px;
+    text-align: center;
     cursor: pointer;
+}
+
+#zmt-desktop-nav a:hover {
+    background-color: #92e9ffff !important;
 }
 
 #zmt-desktop-nav .logo {
@@ -108,6 +121,7 @@ Desktop Navigation
         font-size: 15px;
     }
     body {
+        padding-top: 0px;
         padding-bottom: 70px;
     }
     #main-tabs-ul {
@@ -156,6 +170,10 @@ Desktop Navigation
 
     #zmt-nav a {
         flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
         border: none;
         background: none;
         color: black;
